# prototype-admin

./: .coverage  .cursorrules  .gitignore  .pre-commit-config.yaml  .replignore  .replit  .replit.bak-2026-05-24  .replit.bak-2026-05-24-pre-ddtrace  .replitignore  2000L  =60  AGENT_COMPLIANCE_MATRIX_2026-04-27.md  AGENT_STUDIO_ENTERPRISE_DELIVERY_REPORT.md  ANALISE_COMPARATIVA_V5_vs_LIA.md  BACKLOG_v2_2026-05-21.md  BILLING_PRICING_HANDOFF.md  CHERRY_PICK_APPENDICES.md  CHERRY_PICK_MAP.md  CHERRY_PICK_MAP.md.bak.before_44_expansion  CLAUDE.md  DEPLOY_GUIDE.md  DIAGNOSTIC_REPORT_APRIL_2026.md  EXECUTION_PLAN.md  GCP_INFRASTRUCTURE_CHECKLIST.md  GITHUB_SECRETS_SETUP.md  HANDOFF_v2_2026-05-21.md  IA_LAYER_BENEFITS_PRV_AUDIT.md  Makefile  PLATFORM_MAP.md  PRODUCT_READINESS_AUDIT_REPORT.md  QA_FIX_REPORT_2026-04-15.md  QA_TEST_PLAN_2026-04-15.md  README.md  RECRUITER_AGENT_V5_DOCUMENTACAO_COMPLETA.md  SPRINT_1_HANDOFF.md  VALIDATION_PLAN.md  _forensic.py  _forensic2.py  agents_benchmark_20260403_193837.csv  agents_benchmark_20260403_193837.json  (+83 more)
lia-agent-system/: .bandit  .coverage.repl.pid39345.Xzk8X3ix  .coverage.repl.pid9736.XZUayzlx.HdnK3y2wUmTh  .coveragerc  .dockerignore  .env.bak  .env.example  .env.production.example  .gitignore  .mutmut-cache  .mutmut-config  .pre-commit-config.yaml  .pre-commit-config.yaml.bak.before-sprint0  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_TARGET.md  ARCHITECTURE_TARGET_V2.md  Any  CLAUDE.md  CONTRIBUTING.md  DEVELOPER_HANDOFF.md  Dockerfile  Dockerfile.prod  Dockerfile.worker  HARDENING_PLAN.md  LIA_REFACTORING_REPORT.md  LIA_REFACTORING_REPORT_V2.md  LLM_FACTORY_HANDOFF_v2.md  Makefile  ONBOARDING.md  QUICKSTART.md  RAILS_API_INTEGRATION.md  README.md  REFACTOR_PLAN.md  _cm.txt  _commit_msg.txt  _psc.py  alembic.ini  bandit.yaml  (+21 more)
lia-agent-system/.langgraph_studio/: README.md
lia-agent-system/.planning/: bubble-supervisor-consolidation-plan.md  fase-a-supervisor-plan.md  tool-catalog-reconciliation-plan.md  wsi-consolidation-plan.md
lia-agent-system/alembic/: env.py
lia-agent-system/app/: agents_registry.yaml  main.py  main.py.bak  main.py.bak.before-f2b2-fix
lia-agent-system/database/: TRIAGEM_OWNERSHIP.md  wsi_schema.sql  wsi_schema_corrected.sql
lia-agent-system/deploy/: aws_setup.sh  gcp_setup.sh  run_migrations.sh
lia-agent-system/docs/: AUDIT_ACTIONS_TOOLS_DESCRIPTIONS.md  AUDIT_FORK_VS_RAILS_2026-04-05.md  BRANCH_MAP.md  CANONICAL_SOURCES_SPEC.md  COMPLIANCE_REPORTER_SPEC.md  CONCEITOS_IA_WEDOTALENT.md  CONFIGURATION.md  CONTRATO_RAILS_TEAMS.md  DEVELOPER_HANDOFF.md  DISASTER_RECOVERY.md  DOCS_INDEX.md  DOC_HANDOFF_TEAMS.md  FAIRNESS_GUARD_COVERAGE.md  FINAL_AUDIT.md  GLOSSARIO_ACTIONS_TOOLS.md  HANDOFF_LIA_MATURITY_PROGRAM_COMPLETE.md  HANDOFF_SESSION_END.md  HISTORICO_TASKS_IMPLEMENTADAS.md  INITIATIVES_AUDIT.md  LIA_AI_HANDOFF.md  LIA_MATURITY_LEAP_RESUMO.md  LIA_MATURITY_ROADMAP.md  MAPA_CAMADA_INTELIGENCIA.md  MUTATION_TESTING_BASELINE.md  OBSERVABILITY_MARKERS.md  ONDA2_PLAN.md  PHASE0_AUDIT.md  PLANO_CICLO_FECHADO_LIA.md  PRODUCTION_READINESS_GAPS.md  PRODUCTION_READINESS_REPORT.md  RAILS_GAPS.md  README.md  RLS_CONTRACT.md  RUNBOOK_DEGRADATION.md  RUNBOOK_INCIDENT_PLAYBOOKS.md  RUNBOOK_MISSING_TENANT_CONTEXT.md  SHARED_INVENTORY.md  STRATEGIC_MODULES_MONETIZATION.md  TEAMS_ENDPOINTS_AND_DIAGRAM.md  TODO_POLICY_CONSOLIDATION.md  (+14 more)
lia-agent-system/eval/: .gate_history.json  README.md  eval_cases.yaml  eval_judge.py  eval_judge_config.yaml  eval_report.py  eval_report_20260418_232903.html  eval_results_20260417_175852.json  eval_results_20260417_175913.json  eval_results_20260417_180904.json  eval_results_20260417_183121.json  eval_results_20260417_183139.json  eval_results_20260417_184101.json  eval_results_20260417_193911.json  eval_results_20260417_194204.json  eval_results_20260417_201436.json  eval_results_20260417_203809.json  eval_results_20260417_212913.json  eval_results_20260417_222408.json  eval_results_20260417_222410.json  eval_results_20260417_225429.json  eval_results_20260417_225631.json  eval_results_20260417_230709.json  eval_results_20260418_001342.json  eval_results_20260418_001350.json  eval_results_20260418_001404.json  eval_results_20260418_004001.json  eval_results_20260418_010408.json  eval_results_20260418_015307.json  eval_results_20260418_020941.json  eval_results_20260418_021016.json  eval_results_20260418_021119.json  eval_results_20260418_021801.json  eval_results_20260418_022915.json  eval_results_20260418_023023.json  eval_results_20260418_024717.json  eval_results_20260418_030534.json  eval_results_20260418_092305.json  eval_results_20260418_102426.json  eval_results_20260418_110124.json  (+191 more)
lia-agent-system/scripts/: .es_search_allowlist.txt  .rls_allowlist.txt  README.md  README.md.bak.before-sprint0  apply_require_company_id.py  audit_agent_compliance.py  audit_chat_capabilities.py  audit_configuracoes_fields.py  audit_prompts.py  audit_tenant_isolation_handlers.py  audit_tool_routing.py  backfill_candidate_identifier_hash.py  backfill_communication_automations_from_stage_rules.py  backfill_job_vacancy_responsibilities_t_1166.py  backfill_wsi_transparency_extras.py  bootstrap_admin_user.py  bug_spec_generator.py  cache_cleanup.py  check_ab_fairness_gate.py  check_agent_base_class.py  check_agent_compliance.py  check_agent_has_universal_blocks.py  check_agent_hitl_gates.py  check_agent_mro_compliance.py  check_agent_respects_lia_toggles.py  check_agents_registry_paths.py  check_ai_persona_options_no_frontend_drift.py  check_alembic_singlehead.py  check_alert_preferences_schema_sync.py  check_alert_rules_not_hardcoded.py  check_anthropic_prompt_caching.py  check_array_columns_not_jsonb.py  check_audit_append_only_triggers.py  check_audit_hash_chain_exists.py  check_audit_log_completeness.py  check_auth_direct_import.py  check_auth_provider_adoption.py  check_byok_tenant_id_in_llm_calls.py  check_c3b_wires_injection_guard.py  check_c4_guarded_generation.py  (+265 more)
lia-agent-system/shared/: wsi_schema.ts
lia-agent-system/sql/: 001_credit_tables.sql
(+16698 files in other folders)
