[project]
name = "lia-agent-system"
version = "0.1.0"
description = "LIA Agent System — WeDOTalent backend"
requires-python = ">=3.11"
dependencies = [
    # FastAPI & Web
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.19",
    "websockets==13.1",
    # Database
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "asyncpg==0.30.0",
    # LangChain & LangGraph
    "langchain==0.3.9",
    "langchain-anthropic==0.3.22",
    "langchain-openai==0.2.9",
    "langchain-google-vertexai==2.0.8",
    "langgraph==0.2.53",
    "langgraph-checkpoint-postgres==2.0.8",
    "langsmith>=0.2.6,<0.3.0",
    # Async & Queue
    "celery==5.4.0",
    "redis==5.2.0",
    "aio-pika==9.5.3",
    # Pydantic & Validation
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    # HTTP Clients
    "httpx==0.28.1",
    "aiohttp==3.11.10",
    # Vector Search
    "pgvector==0.3.6",
    # Utilities
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-dateutil==2.9.0",
    # Microsoft Integration
    "msal==1.31.0",
    "msgraph-sdk==1.12.0",
    "botbuilder-core==4.17.0",
    "botbuilder-schema==4.17.0",
    "msrest==0.7.1",
    "pyjwt[crypto]==2.10.1",
    "cryptography==44.0.0",
    # Communication
    "twilio==9.4.0",
    "resend==2.19.0",
    # Monitoring
    "sentry-sdk[fastapi]==2.19.2",
    "email-validator==2.2.0",
    # CV Parsing
    "PyPDF2==3.0.1",
    "python-docx==1.1.2",
    # Spreadsheet
    "openpyxl==3.1.5",
    # Web Scraping
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    # Calendar
    "icalendar==6.0.1",
    "pytz==2024.2",
    # Google Calendar
    "google-api-python-client==2.151.0",
    "google-auth==2.36.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    # Scheduler
    "APScheduler==3.10.4",
    # Workspace libs (editable installs)
    "lia-config",
    "lia-utils",
    "lia-audit",
    "lia-messaging",
    "lia-models",
    "lia-agents-core",
    "lia-services",
    "lia-contexts",
    "lia-auth",
    "lia-orchestrator",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
]

[tool.uv.workspace]
members = ["libs/*"]

[tool.uv.sources]
lia-config      = { workspace = true }
lia-utils       = { workspace = true }
lia-audit       = { workspace = true }
lia-messaging   = { workspace = true }
lia-models      = { workspace = true }
lia-agents-core = { workspace = true }
lia-services    = { workspace = true }
lia-contexts    = { workspace = true }
lia-auth        = { workspace = true }
lia-orchestrator = { workspace = true }

# ---------------------------------------------------------------------------
# Lint configuration — enforces architectural boundaries
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# TID251: ban specific imports — prevents re-introduction of app.shared.agents shims.
# Any import from app.shared.agents.* is forbidden; use lia_agents_core.* directly.
extend-select = ["TID"]

[tool.ruff.lint.flake8-tidy-imports]
# Ban imports from the removed shim layer.
# Violations appear as TID251 and fail CI.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"app.shared.agents" = { msg = "Import from lia_agents_core.* directly — app.shared.agents shims were removed in task-124." }
