[project]
name = "api-admin"
version = "0.1.0"
description = "WeDo Talent — Admin API (platform admin, billing, compliance, global policies)"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115.5", "uvicorn[standard]==0.32.1", "lia-config", "lia-models", "lia-events", "lia-audit"]

[tool.uv.sources]
lia-config  = { workspace = true }
lia-models  = { workspace = true }
lia-events  = { workspace = true }
lia-audit   = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
