[project]
name = "lia-audit"
version = "0.1.0"
description = "LIA audit models, storage, writer and callback"
requires-python = ">=3.11"
dependencies = [
    "lia-config",
    "sqlalchemy>=2.0.36",
]

[tool.uv.sources]
lia-config = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
