[project]
name = "lia-config"
version = "0.1.0"
description = "LIA configuration, database session and Celery setup"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "kombu>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
