[project]
name = "lia-schemas"
version = "0.1.0"
description = "Canonical Pydantic contracts compartilhados WeDOTalent (ATS integration boundary, ADR-005)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ats"]
