[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lia-orchestrator"
version = "0.1.0"
description = "LIA Orchestrator — escada de custo, intent routing, semantic cache"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
packages = ["lia_orchestrator"]
